- Fix overflow page facilities

--- a/wp-content/themes/hotel-center-lite-child/assets/css/page-facilities.css
+++ b/wp-content/themes/hotel-center-lite-child/assets/css/page-facilities.css
@@ -75,7 +75,7 @@
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    height: 90px;
+    min-height: 85px;
 }
 
 .pfacilities-item .btn-direct a {
